# rust-wasm-experiments

./: README.md
data-generator-cli/: .gitignore  Cargo.toml  README.md
data-generator-cli/src/: main.rs
demo/: config-overrides.js  index.html  index.js  package-lock.json  package.json  style.css  webpack.config.js
demo/src/: App.js  GenerateDataPage.js  HomePage.js  Menu.js  PerformancePage.js  ProjectInfoPage.js  RenderIf.js  ResourcesPage.js
tx-parser-js/: index.js  package-lock.json  package.json
tx-parser-rs/: Cargo.toml  LICENSE  README.md
tx-parser-rs/src/: lib.rs
