[package]
name = "tx-parser-rs"
version = "0.1.0"
authors = ["Tahar <tntmeijs@gmail.com>"]
edition = "2018"
description = "An example project to show WASM capabilities using Rust"
license = "MIT"
repository = "https://github.com/tntmeijs/rust-wasm-experiments"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
